tests/final/expect/15__torture__malformed_multifile_header_tail_garbage_no_crash.diag
Diagnostics:
Error: Invalid character in source at tests/final/cases/15__torture__malformed_multifile_header_tail_garbage_no_crash.h:6:1 (got '$')
Error at (6:1): Invalid character in source (got '$')
